--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Font Colors -->
+    <color name="default_color">#99FFFFFF</color>
+    <color name="default_color_dark">#CCDDDDDD</color>
 </resources>
