--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -416,19 +416,19 @@
                     <ImageView
                         android:layout_width="32dp"
                         android:layout_height="32dp"
-                        android:src="@drawable/wind"
+                        android:src="@drawable/temperature"
                         android:layout_marginBottom="10sp"
                         app:tint="@color/default_color">
                     </ImageView>
 
                     <TextView
-                        android:id="@+id/wind"
+                        android:id="@+id/tempSensor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="14sp"
                         android:textColor="@color/default_color"
                         android:fontFamily="@font/rubik"
-                        android:text="3 km/h">
+                        android:text="24ª">
                     </TextView>
                 </LinearLayout>
 
